# kirppu

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  DEV_README.md  Dockerfile  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  constraints.txt  docker-compose.yml  make_api_stub.py  makefile  manage.py  pyproject.toml  requirements-dev.txt  requirements-github.txt  requirements-oauth.txt  requirements-production.txt  requirements.txt  setup.cfg
.github/workflows/: test.yml
kirppu/: accounting.py  admin.py  ajax_util.py  apps.py  checkout_api.py  fields.py  forms.py  frontpage.py  gulpfile.js  item_dump.py  mobile.py  models.py  nunjucks_trans.js  package.json  pipeline.js  provision.py  settings.py  signals.py  stats.py  text_engine.py  urls.py  util.py  utils.py  vendors.py  views.py
kirppu/api/: __init__.py  boxes_api.py  common.py  notes.py  receipt.py
kirppu/fixtures/: default_text.json  default_types.json  dev_data.json  finnish_text.json  finnish_types.json  groups.json
kirppu/migrations/: 0001_initial.py  0004_modify_counter.py  0005_add_model_itemstatelog.py  0006_item_lost_property.py  0007_auto_misc_adjustments.py  0008_add_model_box.py  0009_add_permissions_for_item.py  0010_add_owner_info_for_state_log.py  0011_auto_20160127_2212.py  0012_add_terms_accepting.py  0013_add_receipt_suspend.py  0014_add_receipt_type.py  0015_receiptextrarow.py  0016_allow_blank_in_uitext_text.py  0017_add_representative_releation_to_box.py  0018_add_temporary_permits.py  0019_auto_20180703_1153.py  0020_add_item_type_model.py  0021_itemtype_order.py  0022_separate_vendor_person.py  0023_box_bundle_size.py  0024_vendor_mobile_view_visited.py  0025_add_statistics_permission.py  0026_add_accounting_permission.py  0027_allow_blank_clerk_user.py  0028_create_event.py  0029_apply_default_event.py  0030_add_event_feature_columns.py  0031_event_age_restricted_items.py  0032_eventpermission.py  0033_auto_20191016_2230.py  0034_provision_dsl.py  0035_add_vendor_to_receipt.py  0036_add_receipt_vendor_constraint.py  0036_adjust_clerk_managers.py  0037_adjust_clerk_managers.py  0037_event_source_db.py  0038_event_source_db.py  0039_counter_private_key.py  0040_remove_itemtype_key.py  (+8 more)
kirppu/patches/: jquery-1.12.4.patch
kirppu/provision_dsl/: __init__.py  django_interop.py  extra_runtime.py  interpreter.py  test_dsl.py  test_dsl.scm
kirppu/templatetags/: kirppu_login.py  kirppu_tags.py
kirppu/tests/: __init__.py  api_access.py  django_test.pyi  factories.py  test_accounts.py  test_event_management.py  test_frontpage.py  test_itemdump.py  test_persons.py  test_provision.py  test_receipt_removals.py  test_states.py  test_text_engine.py  test_vendor_views.py
kirppu/views/: __init__.py  (+12 more)
kirppu_project/: asgi.py  settings.py  urls.py  wsgi.py
kirppuauth/: admin.py  models.py  urls.py  views.py
kompassi_crowd/: kompassi_client.py
kompassi_oauth2/: LICENSE  backends.py  urls.py  views.py
scripts/: generate-dep-set.py
(+190 files in other folders)
